--- a/styles/style.css
+++ b/styles/style.css
@@ -94,7 +94,8 @@ p{
     position: relative;
     bottom: 10px;
 }
-.ss{
-    padding-bottom: 0;
+footer{
+    background-color: #0B0D17;
+
 }
 /* Our package section start  */
